--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "philetaylor/gpglib",
+    "name": "philetaylor/php-gpglib",
     "description": "A wrapper around GPG for stateless operations. PSR/Log 1.0+",
     "keywords": ["gpg", "encryption"],
     "license": "MIT",
